crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__anonymous_node.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = "if"
---
Root
  Def
    Id "Q"
    Equals "="
    Str
      DoubleQuote "\""
      StrVal "if"
      DoubleQuote "\""
