crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__category_nested.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (statement#expression_statement
    (expression#call_expression))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "statement"
      Hash "#"
      Id "expression_statement"
      Tree
        ParenOpen "("
        Id "expression"
        Hash "#"
        Id "call_expression"
        ParenClose ")"
      ParenClose ")"
