crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__deeply_nested.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (a
    (b
    (c
        (d))))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "a"
      Tree
        ParenOpen "("
        Id "b"
        Tree
          ParenOpen "("
          Id "c"
          Tree
            ParenOpen "("
            Id "d"
            ParenClose ")"
          ParenClose ")"
        ParenClose ")"
      ParenClose ")"
