crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__nested_node.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (function_definition name: (identifier))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "function_definition"
      Field
        Id "name"
        Colon ":"
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      ParenClose ")"
